crates/mako_bundler/tests/snapshots/bundler_test__chunk-2.snap
---
source: crates/mako_bundler/tests/bundler_test.rs
expression: compiler.context.chunk_graph.read().unwrap()
---
graph
 nodes:["<CWD>/tests/fixtures/chunks/chunk-1.js", "<CWD>/tests/fixtures/chunks/chunk-2.js", "<CWD>/tests/fixtures/chunks/entry.js"] 
 references:["<CWD>/tests/fixtures/chunks/entry.js -> <CWD>/tests/fixtures/chunks/chunk-1.js", "<CWD>/tests/fixtures/chunks/chunk-1.js -> <CWD>/tests/fixtures/chunks/chunk-2.js"]
