crates/mako_bundler/tests/snapshots/bundler_test__chunk.snap
---
source: crates/mako_bundler/tests/bundler_test.rs
expression: output
---
[
    "\nconst modules = new Map();\nconst g_define = (name, moduleFactory) => {\n  modules.set(name, moduleFactory);\n};\n\nfunction _interop_require_default(obj) {\n    return obj && obj.__esModule && obj['default'] ? obj : { default: obj, ...obj };\n}\n\nfunction _getRequireWildcardCache(nodeInterop) {\n    if (typeof WeakMap !== \"function\") return null;\n    var cacheBabelInterop = new WeakMap();\n    var cacheNodeInterop = new WeakMap();\n    return (_getRequireWildcardCache = function(nodeInterop) {\n        return nodeInterop ? cacheNodeInterop : cacheBabelInterop;\n    })(nodeInterop);\n}\nfunction _interop_require_wildcard(obj, nodeInterop) {\n    if (!nodeInterop && obj && obj.__esModule) {\n        return obj;\n    }\n    if (obj === null || typeof obj !== \"object\" && typeof obj !== \"function\") {\n        return { default: obj };\n    }\n    var cache = _getRequireWildcardCache(nodeInterop);\n    if (cache && cache.has(obj)) {\n        return cache.get(obj);\n    }\n    var newObj = {};\n    var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor;\n    for (var key in obj) {\n        if (key !== \"default\" && Object.prototype.hasOwnProperty.call(obj, key)) {\n            var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null;\n            if (desc && (desc.get || desc.set)) {\n                Object.defineProperty(newObj, key, desc);\n            } else {\n                newObj[key] = obj[key];\n            }\n        }\n    }\n    newObj.default = obj;\n    if (cache) {\n        cache.set(obj, newObj);\n    }\n    return newObj;\n}\n\nconst moduleCache = new Map();\nconst requireModule = (name) => {\n  if (moduleCache.has(name)) {\n    return moduleCache.get(name).exports;\n  }\n\n  if (!modules.has(name)) {\n    throw new Error(`Module '${name}' does not exist.`);\n  }\n\n  const moduleFactory = modules.get(name);\n  const module = {\n    exports: {},\n  };\n  moduleCache.set(name, module);\n  moduleFactory(module, module.exports, requireModule);\n  return module.exports;\n};\n        ",
    "\n        g_define(\"@swc/helpers/_/_interop_require_default\", function(module, exports, require) {\n\"use strict\";\nexports._ = exports._interop_require_default = _interop_require_default;\nfunction _interop_require_default(obj) {\n    return obj && obj.__esModule ? obj : { default: obj, ...obj };\n}\n        });\n",
    "\n        g_define(\"@swc/helpers/_/_export_star\", function(module, exports, require) {\n\"use strict\";\nexports._ = exports._export_star = _export_star;\nfunction _export_star(from, to) {\n    Object.keys(from).forEach(function(k) {\n        if (k !== \"default\" && !Object.prototype.hasOwnProperty.call(to, k)) {\n            Object.defineProperty(to, k, {\n                enumerable: true,\n                get: function() {\n                    return from[k];\n                }\n            });\n        }\n    });\n    return from;\n}\n        });\n",
    "\n        g_define(\"@swc/helpers/_/_interop_require_wildcard\", function(module, exports, require) {\n\"use strict\";\nfunction _getRequireWildcardCache(nodeInterop) {\n    if (typeof WeakMap !== \"function\") return null;\n    var cacheBabelInterop = new WeakMap();\n    var cacheNodeInterop = new WeakMap();\n    return (_getRequireWildcardCache = function(nodeInterop) {\n        return nodeInterop ? cacheNodeInterop : cacheBabelInterop;\n    })(nodeInterop);\n}\nexports._ = exports._interop_require_wildcard = _interop_require_wildcard;\nfunction _interop_require_wildcard(obj, nodeInterop) {\n    if (!nodeInterop && obj && obj.__esModule) return obj;\n    if (obj === null || typeof obj !== \"object\" && typeof obj !== \"function\") return { default: obj };\n    var cache = _getRequireWildcardCache(nodeInterop);\n    if (cache && cache.has(obj)) return cache.get(obj);\n    var newObj = {};\n    var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor;\n    for (var key in obj) {\n        if (key !== \"default\" && Object.prototype.hasOwnProperty.call(obj, key)) {\n            var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null;\n            if (desc && (desc.get || desc.set)) Object.defineProperty(newObj, key, desc);\n            else newObj[key] = obj[key];\n        }\n    }\n    newObj.default = obj;\n    if (cache) cache.set(obj, newObj);\n    return newObj;\n}\n        });\n",
    "g_define(\"<CWD>/tests/fixtures/chunks/entry.js\", function(module, exports, require) {\n\"use strict\";\n(async ()=>{\n    await Promise.resolve().then(function() {\n        return _interop_require_wildcard(require(\"<CWD>/tests/fixtures/chunks/chunk-1.js\"));\n    });\n})();\n});",
    "g_define(\"<CWD>/tests/fixtures/chunks/chunk-1.js\", function(module, exports, require) {\n\"use strict\";\nPromise.resolve().then(function() {\n    return _interop_require_wildcard(require(\"<CWD>/tests/fixtures/chunks/chunk-2.js\"));\n});\n});",
    "g_define(\"<CWD>/tests/fixtures/chunks/chunk-2.js\", function(module, exports, require) {\n\"use strict\";\nObject.defineProperty(exports, \"__esModule\", {\n    value: true\n});\nObject.defineProperty(exports, \"foo\", {\n    enumerable: true,\n    get: function() {\n        return foo;\n    }\n});\nconst foo = 1;\n});",
    "\nrequireModule(\"<CWD>/tests/fixtures/chunks/entry.js\");",
]
