crates/mako_bundler/tests/snapshots/bundler_test__external.snap
---
source: crates/mako_bundler/tests/bundler_test.rs
expression: output
---
[
    [
        "\nconst modules = new Map();\nconst g_define = (name, moduleFactory) => {\n    modules.set(name, moduleFactory);\n};\n\nfunction _interop_require_default(obj) {\n    return obj && obj.__esModule && obj['default'] ? obj : { default: obj, ...obj };\n}\n\nfunction _getRequireWildcardCache(nodeInterop) {\n    if (typeof WeakMap !== \"function\") return null;\n    var cacheBabelInterop = new WeakMap();\n    var cacheNodeInterop = new WeakMap();\n    return (_getRequireWildcardCache = function(nodeInterop) {\n        return nodeInterop ? cacheNodeInterop : cacheBabelInterop;\n    })(nodeInterop);\n}\nfunction _interop_require_wildcard(obj, nodeInterop) {\n    if (!nodeInterop && obj && obj.__esModule) {\n        return obj;\n    }\n    if (obj === null || typeof obj !== \"object\" && typeof obj !== \"function\") {\n        return { default: obj };\n    }\n    var cache = _getRequireWildcardCache(nodeInterop);\n    if (cache && cache.has(obj)) {\n        return cache.get(obj);\n    }\n    var newObj = {};\n    var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor;\n    for (var key in obj) {\n        if (key !== \"default\" && Object.prototype.hasOwnProperty.call(obj, key)) {\n            var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null;\n            if (desc && (desc.get || desc.set)) {\n                Object.defineProperty(newObj, key, desc);\n            } else {\n                newObj[key] = obj[key];\n            }\n        }\n    }\n    newObj.default = obj;\n    if (cache) {\n        cache.set(obj, newObj);\n    }\n    return newObj;\n}\n\nconst moduleCache = new Map();\nconst requireModule = (name) => {\n    if (moduleCache.has(name)) {\n    return moduleCache.get(name).exports;\n    }\n\n    if (!modules.has(name)) {\n    throw new Error(`Module '${name}' does not exist.`);\n    }\n\n    const moduleFactory = modules.get(name);\n    const module = {\n    exports: {},\n    };\n    moduleCache.set(name, module);\n    moduleFactory(module, module.exports, requireModule);\n    return module.exports;\n};\n        ",
        "g_define(\"<CWD>/tests/fixtures/external/entry.js\", function(module, exports, require) {\n    \"use strict\";\n    Object.defineProperty(exports, \"__esModule\", {\n        value: true\n    });\n    var _test = require(\"test\");\n    console.log((0, _test.test)());\n});\n",
        "g_define(\"test\", function(module, exports, require) {\n    exports.default = test;\n});\n",
        "\nrequireModule(\"<CWD>/tests/fixtures/external/entry.js\");",
    ],
]
