crates/mako_bundler/tests/snapshots/bundler_test__multiple_files-2.snap
---
source: crates/mako_bundler/tests/bundler_test.rs
expression: "&map"
---
{
    ModuleId {
        id: "/tmp/two.js",
    }: [],
    ModuleId {
        id: "/tmp/entry.js",
    }: [
        (
            ModuleId {
                id: "/tmp/three.js",
            },
            Dependency {
                source: "./three",
                resolve_type: Import,
                order: 0,
            },
        ),
        (
            ModuleId {
                id: "/tmp/one.js",
            },
            Dependency {
                source: "./one",
                resolve_type: Import,
                order: 1,
            },
        ),
        (
            ModuleId {
                id: "/tmp/two.js",
            },
            Dependency {
                source: "./two",
                resolve_type: Import,
                order: 2,
            },
        ),
    ],
    ModuleId {
        id: "/tmp/one.js",
    }: [
        (
            ModuleId {
                id: "/tmp/two.js",
            },
            Dependency {
                source: "./two",
                resolve_type: Import,
                order: 0,
            },
        ),
    ],
    ModuleId {
        id: "/tmp/three.js",
    }: [],
}
