crates/mako_bundler/tests/snapshots/bundler_test__multiple_files-3.snap
---
source: crates/mako_bundler/tests/bundler_test.rs
expression: "&module_graph"
---
graph
 nodes:["<CWD>/tests/fixtures/multiple/entry.js", "<CWD>/tests/fixtures/multiple/one.js", "<CWD>/tests/fixtures/multiple/three.js", "<CWD>/tests/fixtures/multiple/two.js"] 
 references:["<CWD>/tests/fixtures/multiple/entry.js -> <CWD>/tests/fixtures/multiple/one.js", "<CWD>/tests/fixtures/multiple/entry.js -> <CWD>/tests/fixtures/multiple/three.js", "<CWD>/tests/fixtures/multiple/entry.js -> <CWD>/tests/fixtures/multiple/two.js", "<CWD>/tests/fixtures/multiple/one.js -> <CWD>/tests/fixtures/multiple/two.js"]
