crates/mako_bundler/tests/snapshots/bundler_test__multiple_files.snap
---
source: crates/mako_bundler/tests/bundler_test.rs
expression: output
---
[
    "\nconst modules = new Map();\nconst g_define = (name, moduleFactory) => {\n  modules.set(name, moduleFactory);\n};\n\nfunction _interop_require_default(obj) {\n    return obj && obj.__esModule && obj['default'] ? obj : { default: obj, ...obj };\n}\n\nfunction _getRequireWildcardCache(nodeInterop) {\n    if (typeof WeakMap !== \"function\") return null;\n    var cacheBabelInterop = new WeakMap();\n    var cacheNodeInterop = new WeakMap();\n    return (_getRequireWildcardCache = function(nodeInterop) {\n        return nodeInterop ? cacheNodeInterop : cacheBabelInterop;\n    })(nodeInterop);\n}\nfunction _interop_require_wildcard(obj, nodeInterop) {\n    if (!nodeInterop && obj && obj.__esModule) {\n        return obj;\n    }\n    if (obj === null || typeof obj !== \"object\" && typeof obj !== \"function\") {\n        return { default: obj };\n    }\n    var cache = _getRequireWildcardCache(nodeInterop);\n    if (cache && cache.has(obj)) {\n        return cache.get(obj);\n    }\n    var newObj = {};\n    var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor;\n    for (var key in obj) {\n        if (key !== \"default\" && Object.prototype.hasOwnProperty.call(obj, key)) {\n            var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null;\n            if (desc && (desc.get || desc.set)) {\n                Object.defineProperty(newObj, key, desc);\n            } else {\n                newObj[key] = obj[key];\n            }\n        }\n    }\n    newObj.default = obj;\n    if (cache) {\n        cache.set(obj, newObj);\n    }\n    return newObj;\n}\n\nconst moduleCache = new Map();\nconst requireModule = (name) => {\n  if (moduleCache.has(name)) {\n    return moduleCache.get(name).exports;\n  }\n\n  if (!modules.has(name)) {\n    throw new Error(`Module '${name}' does not exist.`);\n  }\n\n  const moduleFactory = modules.get(name);\n  const module = {\n    exports: {},\n  };\n  moduleCache.set(name, module);\n  moduleFactory(module, module.exports, requireModule);\n  return module.exports;\n};\n        ",
    "g_define(\"<CWD>/tests/fixtures/multiple/entry.js\", function(module, exports, require) {\n\"use strict\";\nObject.defineProperty(exports, \"__esModule\", {\n    value: true\n});\nvar _three = require(\"<CWD>/tests/fixtures/multiple/three.js\");\nvar _one = require(\"<CWD>/tests/fixtures/multiple/one.js\");\nvar _two = require(\"<CWD>/tests/fixtures/multiple/two.js\");\nconsole.log((0, _one.one)());\n});",
    "g_define(\"<CWD>/tests/fixtures/multiple/two.js\", function(module, exports, require) {\n\"use strict\";\nObject.defineProperty(exports, \"__esModule\", {\n    value: true\n});\nObject.defineProperty(exports, \"two\", {\n    enumerable: true,\n    get: function() {\n        return two;\n    }\n});\nfunction two() {\n    return 123;\n}\n});",
    "g_define(\"<CWD>/tests/fixtures/multiple/one.js\", function(module, exports, require) {\n\"use strict\";\nObject.defineProperty(exports, \"__esModule\", {\n    value: true\n});\nObject.defineProperty(exports, \"one\", {\n    enumerable: true,\n    get: function() {\n        return one;\n    }\n});\nvar _two = require(\"<CWD>/tests/fixtures/multiple/two.js\");\nfunction one() {\n    return (0, _two.two)();\n}\n});",
    "g_define(\"<CWD>/tests/fixtures/multiple/three.js\", function(module, exports, require) {\n\"use strict\";\nObject.defineProperty(exports, \"__esModule\", {\n    value: true\n});\nObject.defineProperty(exports, \"three\", {\n    enumerable: true,\n    get: function() {\n        return three;\n    }\n});\nfunction three() {\n    return 123;\n}\n});",
    "\nrequireModule(\"<CWD>/tests/fixtures/multiple/entry.js\");",
]
